generated/schemeParser.py
# Generated from scheme.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class schemeParser ( Parser ):

    grammarFileName = "scheme.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'define'", "'main'", "')'", "'''", 
                     "'car'", "'cdr'", "'cons'", "'null?'", "'append'", 
                     "'length'", "'display'", "'if'", "'cond'", "'let'", 
                     "'read'", "'+'", "'-'", "'/'", "'*'", "'mod'", "'^'", 
                     "'max'", "'min'", "'='", "'<'", "'>'", "'<='", "'>='", 
                     "'<>'", "'and'", "'or'", "'nor'", "'xor'", "'nand'", 
                     "'xnor'", "'implies'", "'not'", "'number?'", "'boolean?'", 
                     "'string?'", "'list?'", "'newline'", "'set!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "BOOLEAN", "STRING", "IDENTIFIER", 
                      "WS", "COMMENT" ]

    RULE_root = 0
    RULE_definitions = 1
    RULE_main = 2
    RULE_expression = 3
    RULE_listExpression = 4
    RULE_displayExpression = 5
    RULE_defineFunction = 6
    RULE_defineConstant = 7
    RULE_ifExpression = 8
    RULE_condExpression = 9
    RULE_letExpression = 10
    RULE_functionCall = 11
    RULE_readExpression = 12
    RULE_arithmeticExpression = 13
    RULE_comparisonExpression = 14
    RULE_logicalExpression = 15
    RULE_consultExpression = 16
    RULE_newLine = 17
    RULE_editConstantExpression = 18
    RULE_literal = 19

    ruleNames =  [ "root", "definitions", "main", "expression", "listExpression", 
                   "displayExpression", "defineFunction", "defineConstant", 
                   "ifExpression", "condExpression", "letExpression", "functionCall", 
                   "readExpression", "arithmeticExpression", "comparisonExpression", 
                   "logicalExpression", "consultExpression", "newLine", 
                   "editConstantExpression", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    NUMBER=45
    BOOLEAN=46
    STRING=47
    IDENTIFIER=48
    WS=49
    COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(schemeParser.MainContext,0)


        def definitions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.DefinitionsContext)
            else:
                return self.getTypedRuleContext(schemeParser.DefinitionsContext,i)


        def getRuleIndex(self):
            return schemeParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = schemeParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 40
                    self.definitions() 
                self.state = 45
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 46
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defineFunction(self):
            return self.getTypedRuleContext(schemeParser.DefineFunctionContext,0)


        def defineConstant(self):
            return self.getTypedRuleContext(schemeParser.DefineConstantContext,0)


        def getRuleIndex(self):
            return schemeParser.RULE_definitions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinitions" ):
                return visitor.visitDefinitions(self)
            else:
                return visitor.visitChildren(self)




    def definitions(self):

        localctx = schemeParser.DefinitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definitions)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.defineFunction()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.defineConstant()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return schemeParser.RULE_main

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = schemeParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(schemeParser.T__0)
            self.state = 53
            self.match(schemeParser.T__1)
            self.state = 54
            self.match(schemeParser.T__0)
            self.state = 55
            self.match(schemeParser.T__2)
            self.state = 56
            self.match(schemeParser.T__3)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 527765581332514) != 0):
                self.state = 57
                self.expression()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(schemeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifExpression(self):
            return self.getTypedRuleContext(schemeParser.IfExpressionContext,0)


        def defineConstant(self):
            return self.getTypedRuleContext(schemeParser.DefineConstantContext,0)


        def condExpression(self):
            return self.getTypedRuleContext(schemeParser.CondExpressionContext,0)


        def letExpression(self):
            return self.getTypedRuleContext(schemeParser.LetExpressionContext,0)


        def literal(self):
            return self.getTypedRuleContext(schemeParser.LiteralContext,0)


        def listExpression(self):
            return self.getTypedRuleContext(schemeParser.ListExpressionContext,0)


        def readExpression(self):
            return self.getTypedRuleContext(schemeParser.ReadExpressionContext,0)


        def displayExpression(self):
            return self.getTypedRuleContext(schemeParser.DisplayExpressionContext,0)


        def arithmeticExpression(self):
            return self.getTypedRuleContext(schemeParser.ArithmeticExpressionContext,0)


        def comparisonExpression(self):
            return self.getTypedRuleContext(schemeParser.ComparisonExpressionContext,0)


        def logicalExpression(self):
            return self.getTypedRuleContext(schemeParser.LogicalExpressionContext,0)


        def consultExpression(self):
            return self.getTypedRuleContext(schemeParser.ConsultExpressionContext,0)


        def editConstantExpression(self):
            return self.getTypedRuleContext(schemeParser.EditConstantExpressionContext,0)


        def newLine(self):
            return self.getTypedRuleContext(schemeParser.NewLineContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(schemeParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return schemeParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = schemeParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.ifExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.defineConstant()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.condExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.letExpression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.literal()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 70
                self.listExpression()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 71
                self.readExpression()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 72
                self.displayExpression()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.arithmeticExpression()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 74
                self.comparisonExpression()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 75
                self.logicalExpression()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 76
                self.consultExpression()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 77
                self.editConstantExpression()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 78
                self.newLine()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 79
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return schemeParser.RULE_listExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ListCreationContext(ListExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a schemeParser.ListExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCreation" ):
                return visitor.visitListCreation(self)
            else:
                return visitor.visitChildren(self)


    class NullExpressionContext(ListExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a schemeParser.ListExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(schemeParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullExpression" ):
                return visitor.visitNullExpression(self)
            else:
                return visitor.visitChildren(self)


    class AppendExpressionContext(ListExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a schemeParser.ListExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAppendExpression" ):
                return visitor.visitAppendExpression(self)
            else:
                return visitor.visitChildren(self)


    class ConsExpressionContext(ListExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a schemeParser.ListExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConsExpression" ):
                return visitor.visitConsExpression(self)
            else:
                return visitor.visitChildren(self)


    class CarExpressionContext(ListExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a schemeParser.ListExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(schemeParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCarExpression" ):
                return visitor.visitCarExpression(self)
            else:
                return visitor.visitChildren(self)


    class CdrExpressionContext(ListExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a schemeParser.ListExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(schemeParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCdrExpression" ):
                return visitor.visitCdrExpression(self)
            else:
                return visitor.visitChildren(self)


    class LengthExpressionContext(ListExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a schemeParser.ListExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(schemeParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLengthExpression" ):
                return visitor.visitLengthExpression(self)
            else:
                return visitor.visitChildren(self)



    def listExpression(self):

        localctx = schemeParser.ListExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listExpression)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = schemeParser.ListCreationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(schemeParser.T__4)
                self.state = 83
                self.match(schemeParser.T__0)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 527765581332514) != 0):
                    self.state = 84
                    self.expression()
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 90
                self.match(schemeParser.T__3)
                pass

            elif la_ == 2:
                localctx = schemeParser.CarExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(schemeParser.T__0)
                self.state = 92
                self.match(schemeParser.T__5)
                self.state = 93
                self.expression()
                self.state = 94
                self.match(schemeParser.T__3)
                pass

            elif la_ == 3:
                localctx = schemeParser.CdrExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.match(schemeParser.T__0)
                self.state = 97
                self.match(schemeParser.T__6)
                self.state = 98
                self.expression()
                self.state = 99
                self.match(schemeParser.T__3)
                pass

            elif la_ == 4:
                localctx = schemeParser.ConsExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.match(schemeParser.T__0)
                self.state = 102
                self.match(schemeParser.T__7)
                self.state = 103
                self.expression()
                self.state = 104
                self.expression()
                self.state = 105
                self.match(schemeParser.T__3)
                pass

            elif la_ == 5:
                localctx = schemeParser.NullExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.match(schemeParser.T__0)
                self.state = 108
                self.match(schemeParser.T__8)
                self.state = 109
                self.expression()
                self.state = 110
                self.match(schemeParser.T__3)
                pass

            elif la_ == 6:
                localctx = schemeParser.AppendExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 112
                self.match(schemeParser.T__0)
                self.state = 113
                self.match(schemeParser.T__9)
                self.state = 114
                self.expression()
                self.state = 115
                self.expression()
                self.state = 116
                self.match(schemeParser.T__3)
                pass

            elif la_ == 7:
                localctx = schemeParser.LengthExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 118
                self.match(schemeParser.T__0)
                self.state = 119
                self.match(schemeParser.T__10)
                self.state = 120
                self.expression()
                self.state = 121
                self.match(schemeParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisplayExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(schemeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return schemeParser.RULE_displayExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisplayExpression" ):
                return visitor.visitDisplayExpression(self)
            else:
                return visitor.visitChildren(self)




    def displayExpression(self):

        localctx = schemeParser.DisplayExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_displayExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(schemeParser.T__0)
            self.state = 126
            self.match(schemeParser.T__11)
            self.state = 127
            self.expression()
            self.state = 128
            self.match(schemeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(schemeParser.IDENTIFIER)
            else:
                return self.getToken(schemeParser.IDENTIFIER, i)

        def expression(self):
            return self.getTypedRuleContext(schemeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return schemeParser.RULE_defineFunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineFunction" ):
                return visitor.visitDefineFunction(self)
            else:
                return visitor.visitChildren(self)




    def defineFunction(self):

        localctx = schemeParser.DefineFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_defineFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(schemeParser.T__0)
            self.state = 131
            self.match(schemeParser.T__1)
            self.state = 132
            self.match(schemeParser.T__0)
            self.state = 133
            self.match(schemeParser.IDENTIFIER)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==48:
                self.state = 134
                self.match(schemeParser.IDENTIFIER)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(schemeParser.T__3)
            self.state = 141
            self.expression()
            self.state = 142
            self.match(schemeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(schemeParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(schemeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return schemeParser.RULE_defineConstant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineConstant" ):
                return visitor.visitDefineConstant(self)
            else:
                return visitor.visitChildren(self)




    def defineConstant(self):

        localctx = schemeParser.DefineConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_defineConstant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(schemeParser.T__0)
            self.state = 145
            self.match(schemeParser.T__1)
            self.state = 146
            self.match(schemeParser.IDENTIFIER)
            self.state = 147
            self.expression()
            self.state = 148
            self.match(schemeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return schemeParser.RULE_ifExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpression" ):
                return visitor.visitIfExpression(self)
            else:
                return visitor.visitChildren(self)




    def ifExpression(self):

        localctx = schemeParser.IfExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(schemeParser.T__0)
            self.state = 151
            self.match(schemeParser.T__12)
            self.state = 152
            self.expression()
            self.state = 153
            self.expression()
            self.state = 154
            self.expression()
            self.state = 155
            self.match(schemeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return schemeParser.RULE_condExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondExpression" ):
                return visitor.visitCondExpression(self)
            else:
                return visitor.visitChildren(self)




    def condExpression(self):

        localctx = schemeParser.CondExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(schemeParser.T__0)
            self.state = 158
            self.match(schemeParser.T__13)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 159
                self.match(schemeParser.T__0)
                self.state = 160
                self.expression()
                self.state = 161
                self.expression()
                self.state = 162
                self.match(schemeParser.T__3)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self.match(schemeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(schemeParser.IDENTIFIER)
            else:
                return self.getToken(schemeParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return schemeParser.RULE_letExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetExpression" ):
                return visitor.visitLetExpression(self)
            else:
                return visitor.visitChildren(self)




    def letExpression(self):

        localctx = schemeParser.LetExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_letExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(schemeParser.T__0)
            self.state = 172
            self.match(schemeParser.T__14)
            self.state = 173
            self.match(schemeParser.T__0)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 174
                self.match(schemeParser.T__0)
                self.state = 175
                self.match(schemeParser.IDENTIFIER)
                self.state = 176
                self.expression()
                self.state = 177
                self.match(schemeParser.T__3)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 184
            self.match(schemeParser.T__3)
            self.state = 185
            self.expression()
            self.state = 186
            self.match(schemeParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(schemeParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(schemeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(schemeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return schemeParser.RULE_functionCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):
